fix: Add clarifying note

--- a/resume.tex
+++ b/resume.tex
@@ -156,7 +156,7 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
 
     \resumeSubheading
       {\href{https://americantours.com/}{AmericanTours International, LLC \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
-      {Front End Engineer (Remote)}{Nov 2019 – Mar 2020}
+      {Front End Engineer (Remote)}{Nov 2019 – Mar 2020*}
       \resumeItemListStart
         \resumeItem
           {Led an engineering team of two in charge of implementing a modern, fast, and aesthetic re-imagining of ATI's internal administration tool used by travel agents for payment and transaction review, and processing.}
@@ -180,6 +180,8 @@ I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of e
           {Integrated code linting and auto-formatting for JS/JSX files as part of test suite, and VS Code.}
       \resumeItemListEnd
       {\footnotesize Tech: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}
+
+      {\footnotesize * – Project ended due to COVID-19.}
 
     \resumeSubheading
       {\href{https://www.switchfly.com/}{Switchfly, LLC \ExternalLink}}{via \href{https://nearsoft.com}{Nearsoft}}
