revert: Font changes, not playing nice when building

--- a/resume.tex
+++ b/resume.tex
@@ -10,7 +10,6 @@
 \documentclass[11pt, a4paper]{article}
 
 \usepackage[english]{babel}
-\usepackage{palatino}
 \usepackage[usenames,dvipsnames]{color}
 \usepackage{enumitem}
 \usepackage{fancyhdr}
@@ -115,7 +114,7 @@
 % ==========================================================================
 
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \scshape{\textbf{\LARGE Alejandro Beltran}} & \small{Email: alebelcor@gmail.com}\\
+  \textbf{\LARGE Alejandro Beltran} & \small{Email: alebelcor@gmail.com}\\
     & \small{GitHub: \href{https://github.com/alebelcor}{github.com/alebelcor \externalLink}}\\
     & \small{LinkedIn: \href{https://linkedin.com/in/alebelcor}{linkedin.com/in/alebelcor \externalLink}}\\\\
 \end{tabular*}
@@ -257,7 +256,7 @@
       {\href{https://www.freecodecamp.org/certification/alebelcor/javascript-algorithms-and-data-structures}{JavaScript Algorithms and Data Structures \externalLink}}{freeCodeCamp}
       {}{}\vspace{-10pt}
     \resumeSubheading
-      {Scrum Foundation Professional Certificate \scriptsize{(TLSZSQSVHG-MMSTYQSQ-RPFDLKRHJT)}}{Scrum Foundation}
+      {Scrum Foundation Professional Certificate \tiny{(TLSZSQSVHG-MMSTYQSQ-RPFDLKRHJT)}}{Scrum Foundation}
       {}{\vspace{-10pt}}
   \resumeSubHeadingListEnd
 
