chore: Remove redundant indicator from URLs

--- a/resume.tex
+++ b/resume.tex
@@ -122,8 +122,8 @@
 
 \begin{tabularx}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\LARGE Alejandro Beltran} & \small{Email: alebelcor@gmail.com}\\
-    & \small{GitHub: \href{https://github.com/alebelcor}{github.com/alebelcor \externalLink}}\\
-    & \small{LinkedIn: \href{https://linkedin.com/in/alebelcor}{linkedin.com/in/alebelcor \externalLink}}\\\\
+    & \small{GitHub: \href{https://github.com/alebelcor}{github.com/alebelcor}}\\
+    & \small{LinkedIn: \href{https://linkedin.com/in/alebelcor}{linkedin.com/in/alebelcor}}\\\\
 \end{tabularx}
 
 \small I'm a Software Engineer from Mexico focused on Web Front End with 10+ years of experience with a specialty and passion for UI, Web performance, and Web accessibility.
