--- a/resume.tex
+++ b/resume.tex
@@ -138,10 +138,12 @@
 \section{Employment}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Front End Engineer (Remote)}{\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \externalLink \footnote{via \href{https://www.encora.com/}{Encora}}}}{Apr 2020 – Present}
+      {Front End Engineer}{\href{https://www.consumertrack.com/}{ConsumerTrack, Inc. \externalLink \footnote{via \href{https://www.encora.com/}{Encora}}}}{Apr 2020 – Present}
       \resumeItemListStart
         \resumeItem
-          {Focused on Front End Engineering for \href{https://www.importantscore.com}{ImportantScore.com \externalLink} and \href{https://www.gofreecredit.com}{GOFreeCredit.com \externalLink} that offer consumers fast and easy online access to their credit score and credit monitoring services via the three national credit bureaus: Experian, Equifax, and TransUnion}
+          {Working remotely, focused on Front End Engineering for \href{https://www.importantscore.com}{ImportantScore.com \externalLink} and \href{https://www.gofreecredit.com}{GOFreeCredit.com \externalLink} providing consumers easy, fast, and secure online access to their credit score and credit monitoring services via the national credit bureaus: Experian, and TransUnion}
+        \resumeItem
+          {Led and implemented styling architecture and strategy for \href{https://www.gofinancialadvice.com}{GOFinancialAdvice.com \externalLink} resulting in $<$5 kB, code linting, auto formatting, testing, and their integrations to the developer flow (VS Code, hooks, etc.) and in CircleCI.}
         \resumeItem
           {Led Web performance efforts to improve our performance score and Web Vitals, as part of our team mission, which has resulted in a 68\% (mobile) and 17\% (desktop) increase in performance score points for GOFreeCredit.com. And a 43\% (mobile) and 17\% (desktop) increase for ImportantScore.com.}
         \resumeItem
@@ -154,10 +156,10 @@
       {\small{Tech: JavaScript, React, Redux, Next.js, HTML, CSS, Sass (SCSS), Twig, Bootstrap, Node.js, npm, Jest, React Testing Library, Babel, ESLint, Husky, Webpack, CircleCI, jQuery, PostCSS, Visual Studio Code, Git}\vspace{5pt}}
 
     \resumeSubheading
-      {Front End Engineer (Remote)}{\href{https://americantours.com/}{AmericanTours International, LLC \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Nov 2019 – Mar 2020 \footnote{Project cut short due to COVID-19}}
+      {Front End Engineer}{\href{https://americantours.com/}{AmericanTours International, LLC \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Nov 2019 – Mar 2020 \footnote{Project cut short due to COVID-19}}
       \resumeItemListStart
         \resumeItem
-          {Led an engineering team of two in charge of implementing a modern, fast, and aesthetic re-imagining of ATI's internal administration tool used by travel agents for payment and transaction review, and processing.}
+          {Worked remotely, focused on Front End Engineering and leading an Engineering team of two in charge of implementing a modern, fast, and aesthetic re-imagining of ATI's internal administration tool used by travel agents for payment and transaction review, and processing.}
         \resumeItem
           {Designed the shapes, payload/content, and headers of the HTTP API requests and responses.}
         \resumeItem
@@ -180,8 +182,10 @@
       {\small{Tech: JavaScript, HTML, CSS, Sass (SCSS), React, React Bootstrap, React Router, Reselect, Jest, React Testing Library, Create React App, PropTypes, Node.js, Express, ESLint, Prettier, Husky, Yarn, date-fns, Visual Studio Code, SVN with git-svn}\vspace{5pt}}
 
     \resumeSubheading
-      {Software Engineer (Remote)}{\href{https://www.switchfly.com/}{Switchfly, LLC \externalLink \footnotemark[2]}}{Feb 2014 – Aug 2019}
+      {Software Engineer}{\href{https://www.switchfly.com/}{Switchfly, LLC \externalLink \footnotemark[2]}}{Feb 2014 – Aug 2019}
       \resumeItemListStart
+        \resumeItem
+          {Worked remotely, focused on Front End Engineering and maintenance of a SaaS platform that powers travel, loyalty, social, payment, and mobile products for multiple clients.}
         \resumeItem
           {Implemented interstitial/loading page for better SEO and accessibility.}
         \resumeItem
@@ -204,13 +208,13 @@
       {\small{Tech: JavaScript, Java, HTML, CSS, Sass (SCSS), Ember.js, Handlebars.js, Git, Gulp, JSHint, Karma, Mocha, Chai, npm, jQuery, Selenium, Jenkins, Ant, Maven, FreeMarker, ColdFusion, PostgreSQL, IntelliJ IDEA}\vspace{5pt}}
 
     \resumeSubheading
-      {Senior Software Engineer (Remote)}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnote{via \href{https://intugo.co/}{Intugo}}}}{Jul 2013 – Feb 2014}
+      {Senior Front End Engineer}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnote{via \href{https://intugo.co/}{Intugo}}}}{Jul 2013 – Feb 2014}
       {\vspace{-15pt}}
     \resumeSubheading
-      {Software Engineer (Remote)}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnotemark[4]}}{Jul 2012 – Jul 2013}
+      {Front End Engineer}{\href{https://evolvemediallc.com/}{Evolve Media, LLC \externalLink \footnotemark[4]}}{Jul 2012 – Jul 2013}
         \resumeItemListStart
           \resumeItem
-            {Worked as Software Engineer focused on Front End Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
+            {Worked remotely, focused on Front End Engineering for multiple heavily trafficked and highly ranked websites targeting, among other things: women, fashion, sports, gaming and entertainment.}
           \resumeItem
             {Examples: \href{https://www.thefashionspot.com/}{theFashionSpot \externalLink}, \href{https://www.momtastic.com/}{Momtastic \externalLink}, \href{https://www.superherohype.com/}{SuperHeroHype \externalLink}}
         \resumeItemListEnd
@@ -220,7 +224,7 @@
       {Application Development Engineer (Remote)}{\href{https://www.optum.com/}{OptumInsight \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Jan 2009 – Jun 2012}
       \resumeItemListStart
         \resumeItem
-          {Worked as Application Development Engineer extending and maintaining their EMR Lite system, related services and applications.}
+          {Worked remotely, as Application Development Engineer, extending and maintaining an EMR Lite system, related services, and applications.}
       \resumeItemListEnd
       {\small Tech: Java, Java EE, Servlets, JavaScript, LotusScript, Formula Language, Lotus Notes, Lotus Domino, Tomcat, HTML, CSS, XML, XPath, XSLT, SVN, CVS, RCS, Maven, Ant, Make, Jenkins}
 
