fix: Remove word

--- a/resume.tex
+++ b/resume.tex
@@ -221,7 +221,7 @@
         {\small{Tech: JavaScript, PHP, WordPress, HTML, CSS with Sass (SCSS), Compass, and Susy, jQuery, SVN with git-svn, Jenkins, Ant, npm, Grunt, JSHint, Capistrano}\vspace{5pt}}
 
     \resumeSubheading
-      {Application Development Engineer (Remote)}{\href{https://www.optum.com/}{OptumInsight \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Jan 2009 – Jun 2012}
+      {Application Development Engineer}{\href{https://www.optum.com/}{OptumInsight \externalLink \footnote{via \href{https://nearsoft.com/}{Nearsoft}}}}{Jan 2009 – Jun 2012}
       \resumeItemListStart
         \resumeItem
           {Worked remotely, as Application Development Engineer, extending and maintaining an EMR Lite system, related services, and applications.}
